// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DashboardStatCard > Snapshot > matches snapshot in loading state 1`] = `
<div>
  <div
    data-testid="uistatcard"
    icon="[object Object]"
    iconbg="bg-gradient-to-br from-primary/20 to-indigo-500/10"
    iconcolor="text-primary"
    label="加载"
    value="100"
  />
</div>
`;

exports[`DashboardStatCard > Snapshot > matches snapshot with all props 1`] = `
<div>
  <div
    change="+10%"
    class="custom"
    data-testid="uistatcard"
    description="完整属性"
    icon="[object Object]"
    iconbg="bg-blue-100"
    iconcolor="text-blue-500"
    label="完整"
    trend="up"
    value="100"
  />
</div>
`;

exports[`DashboardStatCard > Snapshot > matches snapshot with minimal props 1`] = `
<div>
  <div
    data-testid="uistatcard"
    icon="[object Object]"
    iconbg="bg-gradient-to-br from-primary/20 to-indigo-500/10"
    iconcolor="text-primary"
    label="最小"
    value="100"
  />
</div>
`;
